Add temperature form and temp results views

--- a/views/root_path.erb
+++ b/views/root_path.erb
@@ -1,5 +1,5 @@
 <h1>Home Page</h1>
 <ul>
-  <li> Link to temp converter </li>
+  <li><a href="/temp_converter">Temperature Converter</a></li>
   <li> Link to word reverser</li>
 </ul>
