--- a/views/reverser_form.erb
+++ b/views/reverser_form.erb
@@ -2,3 +2,4 @@
 <form action="/word_reverser_results" method="gets">
   What phrase would you like to reverse? <input type="text" name="phrase">
   <input type="submit" value="submit">
+</form>
