word reverser results view

--- a/views/root_path.erb
+++ b/views/root_path.erb
@@ -1,5 +1,5 @@
 <h1>Home Page</h1>
 <ul>
   <li><a href="/temp_converter">Temperature Converter</a></li>
-  <li> Link to word reverser</li>
+  <li><a href="/reverser">Word Reverser</a></li>
 </ul>
