--- a/views/reverser_form.erb
+++ b/views/reverser_form.erb
@@ -1,5 +1,5 @@
 <h1>Word Reverser</h1>
-<form action="/word_reverser_results" method="gets">
+<form action="/word_reverser_result" method="gets">
   What phrase would you like to reverse? <input type="text" name="phrase">
   <input type="submit" value="submit">
 </form>
